Corrección función promedio

--- a/Kata9.ipynb
+++ b/Kata9.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -24,13 +24,13 @@
     "\n",
     "# Función promedio \n",
     "def promedio(*args):\n",
-    "    return sum(*args)/len(*args)\n",
+    "    return sum(args)/len(args)\n",
     "\n",
     "# Actualiza la función\n",
     "def informeCombustible2(tanque1,tanque2,tanque3):\n",
     "    return promedio(tanque1,tanque2,tanque3)\n",
     "\n",
-    "print(informeCombustible(90,75,100))"
+    "print(informeCombustible2(90,75,100))"
    ]
   },
   {
